# takehome-test-q

./: .dockerignore  .env.example  .gitignore  .tool-versions  README.md  dev  pyproject.toml
app/: Dockerfile  main.py
cli/: log.py  main.py
tests/: test_main.py
tf/: main.tf  provider.tf  variables.tf
