[project]
name = "quilter-app"
version = "0.1.0"
description = "simple web app for take home"
authors = [
    {name = "Noelle Volk",email = "noelle.ada.v@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "uvicorn>=0.40.0,<0.41.0"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
